--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "bootstrap": "^5.3.7",
     "datatables.net": "^2.3.2",
     "datatables.net-dt": "^2.3.2",
     "datatables.net-vue3": "^3.0.4",
