--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "datatables.net": "^2.3.2",
     "datatables.net-dt": "^2.3.2",
