--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
     "bootstrap": "^5.3.7",
     "datatables.net": "^2.3.2",
     "datatables.net-dt": "^2.3.2",
+    "datatables.net-responsive": "^3.0.5",
+    "datatables.net-responsive-dt": "^3.0.5",
+    "datatables.net-select-dt": "^3.0.1",
     "datatables.net-vue3": "^3.0.4",
     "jquery": "^3.7.1",
     "pinia": "^3.0.3",
